@@ -21,7 +21,7 @@ module Mail
     #  a.comments     #=> ['My email address']
     #  a.to_s         #=> 'Mikel Lindsaar <mikel@test.lindsaar.net> (My email address)'
     def initialize(value = nil)
-      @output_type = nil
+      @output_type = :decode
       @tree = nil
       @raw_text = value
       case
